update styling on header, add scroll feature, add boxes for nav section

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div id="quote-text">
                 <p>“Durham's no.1 function band.”  - <em>The Northern Echo</em></p>
             </div>
-            <div id="enter site button">
-                <a href="#nav-home">enter</a>
+            <div id="enter-site-button">
+                <a href="#nav-home"><i class="fa-sharp fa-solid fa-arrow-down"></i></a>
             </div>
         </div>
     </header>
@@ -39,9 +39,12 @@
                 <div class="nav-home-card">contact</div>
             </li>
         </ul>
+
+        <div id="grey-bar"></div>
+        
     </nav>
     <footer>
-        <p>Follow us on:</p>
+        <p><strong>Follow us on:</strong></p>
         <ul>
             <li>
                 <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a>
@@ -51,5 +54,7 @@
             </li>
         </ul>
     </footer>
+
+    <script src="https://kit.fontawesome.com/7f6a607fdc.js" crossorigin="anonymous"></script>
 </body>
 </html>
