add positioning for nav blocks on homepage

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
     <nav id="nav-home">
         <ul>
             <li>
-                <div class="nav-home-card">about</div>
+                <div class="nav-home-card-left">about</div>
             </li>
             <li>
-                <div class="nav-home-card">media</div>
+                <div class="nav-home-card-right">media</div>
             </li>
             <li>
-                <div class="nav-home-card">testimonials</div>
+                <div class="nav-home-card-left">reviews</div>
             </li>
             <li>
-                <div class="nav-home-card">contact</div>
+                <div class="nav-home-card-right">contact</div>
             </li>
         </ul>
 
@@ -45,7 +45,7 @@
     </nav>
     <footer>
         <p><strong>Follow us on:</strong></p>
-        <ul>
+        <ul class="social-links">
             <li>
                 <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a>
             </li>
