get rid of test.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h2>& The Mustard Cutters</h2>
             </div>
             <div id="quote-text">
-                <p>“Durham's no.1 function band.”  - <em>The Northern Echo</em></p>
+                <p>“Durham's no.1 function band...”  <br> - <em>The Northern Echo</em></p>
             </div>
             <div id="enter-site-button">
                 <a href="#nav-home"><i class="fa-sharp fa-solid fa-arrow-down"></i></a>
@@ -27,16 +27,24 @@
     <nav id="nav-home">
         <ul>
             <li>
-                <div class="nav-home-card-left">about</div>
+                <a href="test.html">
+                    <div class="nav-home-card-left"><p>about</p></div>
+                </a>
             </li>
             <li>
-                <div class="nav-home-card-right">media</div>
+                <a href="test.html">
+                    <div class="nav-home-card-right"><p>media</p></div>
+                </a>
             </li>
             <li>
-                <div class="nav-home-card-left">reviews</div>
+                <a href="test.html">
+                    <div class="nav-home-card-left"><p>reviews</p></div>
+                </a>
             </li>
             <li>
-                <div class="nav-home-card-right">contact</div>
+                <a href="test.html">
+                    <div class="nav-home-card-right"><p>contact</p></div>
+                </a>
             </li>
         </ul>
 
@@ -47,10 +55,10 @@
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
             <li>
-                <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">Facebook</a>
+                <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
             </li>
             <li>
-                <a href="https://soundcloud.com/" target="_blank" rel="noopener" aria-label="Visit our Soundcloud page (opens in a new tab)">Soundcloud</a>
+                <a href="https://soundcloud.com/" target="_blank" rel="noopener" aria-label="Visit our Soundcloud page (opens in a new tab)"><i class="fa-brands fa-soundcloud"></i></a>
             </li>
         </ul>
     </footer>
