edit style rules for logo and nav boxes to be more responsive

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <header>
         <div id="hero-image">
             <div id="logo">
-                <h1>Forster</h1>
-                <h2>& The Mustard Cutters</h2>
+                <div id="log-text-container">
+                    <h1>Forster</h1>
+                    <h2>& The Mustard Cutters</h2>
+                </div>
             </div>
             <div id="quote-text">
                 <p>“Durham's no.1 function band...”  <br> - <em>The Northern Echo</em></p>
@@ -47,8 +49,6 @@
                 </a>
             </li>
         </ul>
-
-        <div id="grey-bar"></div>
         
     </nav>
     <footer>
