Add basic html structure of the nav element to the about page.

--- a/about.html
+++ b/about.html
@@ -10,6 +10,30 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <nav>
+        <div>
+            <h1>Forster</h1>
+            <h2>& The Mustard Cutters</h2>
+        </div>
+        <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="about.html">About</a>
+            </li>
+            <li>
+                <a href="media.html">Media</a>
+            </li>
+            <li>
+                <a href="reviews.html">Reviews</a>
+            </li>
+            <li>
+                <a href="contact.html">Contact</a>
+            </li>
+        </ul>
+        <hr>
+    </nav>
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
