--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav id="nav-home">
         <ul>
             <li>
-                <a href="test.html">
+                <a href="about.html">
                     <div class="nav-home-card-left"><p>about</p></div>
                 </a>
             </li>
