Add media.html file and copy over the basic nav/footer structure, fixed homepage links

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                 </a>
             </li>
             <li>
-                <a href="test.html">
+                <a href="media.html">
                     <div class="nav-home-card-right"><p>media</p></div>
                 </a>
             </li>
             <li>
-                <a href="test.html">
+                <a href="reviews.html">
                     <div class="nav-home-card-left"><p>reviews</p></div>
                 </a>
             </li>
             <li>
-                <a href="test.html">
+                <a href="contact.html">
                     <div class="nav-home-card-right"><p>contact</p></div>
                 </a>
             </li>
