adjust positioning of navbar and adjust positioning of homepage logo and quote elements

--- a/about.html
+++ b/about.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <nav id="nav-main">
-        <div id="nav-logo">
-            <h1>Forster</h1>
-            <h2>& The Mustard Cutters</h2>
-        </div>
+        <a href="index.html">
+            <div id="nav-logo">
+                <h1>Forster</h1>
+                <h2>& The Mustard Cutters</h2>
+            </div>
+        </a>
         <ul id="nav-menu">
             <li>
                 <a href="about.html">About</a>
@@ -31,6 +33,9 @@
         </ul>
         <hr>
     </nav>
+    <header id="about-header">
+
+    </header>
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
