--- a/about.html
+++ b/about.html
@@ -34,8 +34,57 @@
         <hr>
     </nav>
     <header id="about-header">
-
+        <div>
+            <h2>About.</h2>
+        </div>
+        <div>
+            <p>We are a fun and upbeat function band based in Durham. 
+                From Jessie J to Stevie Wonder, we'll 'bring the beat in' for any occasion 
+                whether it's your college ball or your Grandma's birthday party.</p>
+        </div>
     </header>
+    <section id="about-body">
+        <h3>Meet the band</h3>
+        <div class="about-bio">
+            <h3>Hannah Forster</h3>
+            <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
+            <img src="" alt="">
+        </div>
+        <hr>
+        <div class="about-bio">
+            <img src="" alt="">
+            <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
+            <h3>Andy 'Silky' Silk</h3>
+        </div>
+        <hr>
+        <div class="about-bio">
+            <h3>Joe Crossley</h3>
+            <p>Unanimously agreed that Joe is the most musically gifted in the band.</p>
+            <img src="" alt="">
+        </div>
+        <hr>
+        <div class="about-bio">
+            <img src="" alt="">
+            <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
+            <h3>Harry Wilkinson</h3>
+        </div>
+        <hr>
+        <div class="about-bio">
+            <h3>Ben DeGaris (Deej)</h3>
+            <p>Ben plays drums. Occasionally he remembers to bring sticks.</p>
+            <img src="" alt="">
+        </div>
+        <hr>
+        <div class="about-bio">
+            <img src="" alt="">
+            <p>The less said about this lot the better. We only let them play with us because they're a laugh to have around.</p>
+            <h3>The Brass Section</h3>
+        </div>
+
+    </section>
+    <section id="book-now">
+        <p>Like what you see?<span>Book Us Now</span></p>
+    </section>
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
