fix styling error in about page positioning that broke homepage, add hover feature to navbar links

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             <h2>About.</h2>
         </div>
         <div>
-            <p>We are a fun and upbeat function band based in Durham. 
+            <p>We are a fun and upbeat function band based in Durham, England. 
                 From Jessie J to Stevie Wonder, we'll 'bring the beat in' for any occasion 
                 whether it's your college ball or your Grandma's birthday party.</p>
         </div>
@@ -53,8 +53,8 @@
         <hr>
         <div class="about-bio-right about-bio">
             <img src="" alt="">
-            <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
             <h3>Andy 'Silky' Silk</h3>
+            <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
         </div>
         <hr>
         <div class="about-bio-left about-bio">
@@ -65,8 +65,8 @@
         <hr>
         <div class="about-bio-right about-bio">
             <img src="" alt="">
-            <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
             <h3>Harry Wilkinson</h3>
+            <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
         </div>
         <hr>
         <div class="about-bio-left about-bio">
@@ -77,8 +77,8 @@
         <hr>
         <div class="about-bio-right about-bio">
             <img src="" alt="">
-            <p>The less said about this lot the better. We only let them play with us because they're a laugh to have around.</p>
             <h3>The Brass Section</h3>
+            <p>The less said about this lot the better. We only let them play with us because they're a laugh to have around.</p>
         </div>
 
     </section>
