style the book now button at the bottom of the about page and add link to the contact page

--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
 
     </section>
     <section id="book-now">
-        <p>Like what you see?<span>Book Us Now</span></p>
+        <p>Like what you see?<a href="index.html"><span>Book Us Now</span></a></p>
     </section>
     <footer>
         <p><strong>Follow us on:</strong></p>
