Add picture to the about page under the header and add comments to css file to help navigate.

--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
         </div>
     </header>
     <section id="about-body">
+        <img src="assets/images/sitephotos/wholebandjuneball2019.jpg" alt="A picture of the whole band in black tie at a disco event at Durham University." id="whole-band-pic">
         <h3>Meet the band</h3>
         <div class="about-bio-left about-bio">
             <h3>Hannah Forster</h3>
@@ -83,7 +84,7 @@
 
     </section>
     <section id="book-now">
-        <p>Like what you see?<a href="index.html"><span>Book Us Now</span></a></p>
+        <p>Like what you see?<a href="contact.html"><span>Book Us Now</span></a></p>
     </section>
     <footer>
         <p><strong>Follow us on:</strong></p>
