remove home button from the nav bar in contact, media, and review pages.

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
         <div class="about-bio-right about-bio">
             <img src="assets/images/sitephotos/brasssection2019.jpg" alt="A picture of the three brass players posing for a photo together at a black tie event in Durham" class="bio-pic-left">
             <h3>The Brass Section</h3>
-            <p>The less said about this lot the better. We only let them play with us because they're a laugh to have around.</p>
+            <p>The less said about this lot the better. We only let them play with us because they're a laugh.</p>
         </div>
 
     </section>
