--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     </header>
     <section id="about-body">
         <img src="assets/images/sitephotos/wholebandjuneball2019.jpg" alt="A picture of the whole band in black tie at a disco event at Durham University." id="whole-band-pic">
-        <h3>Meet the band</h3>
+        <h3>Meet the band.</h3>
         <div class="about-bio-left about-bio">
             <h3>Hannah Forster</h3>
             <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
