--- a/media.html
+++ b/media.html
@@ -36,15 +36,18 @@
     </header>
     <section id="media-section">
         <div>
-
+            <video width="250px" controls>
+                <source src="assets/images/sitephotos/VID-20221201-WA0001.mp4">
+                Your browser does not support HTML video.
+            </video>
         </div>
-        <div>
-            <p>Take a look at the video above from one of our biggest gigs yet! 
-                Forster and the Mustard Cutters played at the prestigous and exlusive June Ball in Durham Castle. <em>Song: Disco Yes by Tom Misch</em> </p>
-        </div>
+        <p>Take a look at the video above from one of our biggest gigs yet! 
+            Forster and the Mustard Cutters played at the prestigous and exlusive June Ball in Durham Castle. <em>Song: Disco Yes by Tom Misch</em> </p>
         <div>
             <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/425638074&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/andrew-silk-743237145" title="Andy Silk" target="_blank" style="color: #cccccc; text-decoration: none;">Andy Silk</a> · <a href="https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely" title="Isn&#x27;t She Lovely" target="_blank" style="color: #cccccc; text-decoration: none;">Isn&#x27;t She Lovely</a></div>
+            <p>Check us out on soundcloud! Here's one of our most popular recordings. <em>Song: Isn't She Lovely by Stevie Wonder</em></p>
         </div>
+        <p>Check us out on soundcloud! Here's one of our most popular recordings. <em>Song: Isn't She Lovely by Stevie Wonder</em></p>
     </section>
     <section id="book-now">
         <p>Like what you hear?<a href="contact.html"><span>Book Us Now</span></a></p>
