Create basic html structure for reviews page

--- a/reviews.html
+++ b/reviews.html
@@ -31,6 +31,31 @@
         </ul>
         <hr>
     </nav>
+    <header id="reviews-header">
+        <h2>Reviews.</h2>
+        <h3>Hear what others have to say about our band:</h3>
+    </header>
+    <section>
+        <div>
+            <p>“They were great at our wedding! Got the whole crowd dancing!”</p>
+            <p><em>Harry & Sally, June 2021</em></p>
+        </div>
+        <div>
+            <p>“We loved them at our summer ball! They brought so much energy to the event!”</p>
+            <p><em>Durham June ball committee, June 2019</em></p>
+        </div>
+        <div>
+            <p>“Great to have two fellow St John's college members rocking it onstage!”</p>
+            <p><em>Bailey Ball Chair, Nov 2018</em></p>
+        </div>
+        <div>
+            <p>“Provided the perfect entertainment for our event and guest speaker. Fun and light-hearted, but great music too.”</p>
+            <p><em>Charis Cheeseman, Feb 2018</em></p>
+        </div>
+    </section>
+    <section id="book-now">
+        <p>Like what you see?<a href="contact.html"><span>Book Us Now</span></a></p>
+    </section>
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
