Add three images and alt text in between the four review divs.

--- a/reviews.html
+++ b/reviews.html
@@ -40,14 +40,17 @@
             <p>“They were great at our wedding! Got the whole crowd dancing!”</p>
             <p><em>Harry & Sally, June 2021</em></p>
         </div>
+        <img src="assets/images/sitephotos/deejdidsomethingdaft.jpg" alt="A picture of the band onstage with their instruments, laughing at the drummer; Ben.">
         <div>
             <p>“We loved them at our summer ball! They brought so much energy to the event!”</p>
             <p><em>Durham June ball committee, June 2019</em></p>
         </div>
+        <img src="assets/images/sitephotos/HannahandHarry2018.jpg" alt="A picture of Hannah and Harry onstage performing during a big live event in a marquee.">
         <div>
             <p>“Great to have two fellow St John's college members rocking it onstage!”</p>
             <p><em>Bailey Ball Chair, Nov 2018</em></p>
         </div>
+        <img src="assets/images/sitephotos/Juneball2019lensflare.jpg" alt="A picture of the band performing at University College's June Ball, and the disco lighting causes a lens flare on the image.">
         <div>
             <p>“Provided the perfect entertainment for our event and guest speaker. Fun and light-hearted, but great music too.”</p>
             <p><em>Charis Cheeseman, Feb 2018</em></p>
