Style header section of review page, background color and text align.

--- a/reviews.html
+++ b/reviews.html
@@ -35,7 +35,7 @@
         <h2>Reviews.</h2>
         <h3>Hear what others have to say about our band:</h3>
     </header>
-    <section>
+    <section id="reviews-section">
         <div>
             <p>“They were great at our wedding! Got the whole crowd dancing!”</p>
             <p><em>Harry & Sally, June 2021</em></p>
