--- a/reviews.html
+++ b/reviews.html
@@ -40,17 +40,23 @@
             <p class="review">“They were great at our wedding! Got the whole crowd dancing!”</p>
             <p class="customer"><em>Harry & Sally, June 2021</em></p>
         </div>
-        <img src="assets/images/sitephotos/deejdidsomethingdaft.jpg" alt="A picture of the band onstage with their instruments, laughing at the drummer; Ben.">
+        <div class="review-image">
+            <img src="assets/images/sitephotos/deejdidsomethingdaft.jpg" alt="A picture of the band onstage with their instruments, laughing at the drummer; Ben.">
+        </div>
         <div>
             <p class="review">“We loved them at our summer ball! They brought so much energy to the event!”</p>
             <p class="customer"><em>Durham June ball committee, June 2019</em></p>
         </div>
-        <img src="assets/images/sitephotos/HannahandHarry2018.jpg" alt="A picture of Hannah and Harry onstage performing during a big live event in a marquee.">
+        <div class="review-image">
+            <img src="assets/images/sitephotos/HannahandHarry2018.jpg" alt="A picture of Hannah and Harry onstage performing during a big live event in a marquee.">
+        </div>
         <div>
             <p class="review">“Great to have two fellow St John's college members rocking it onstage!”</p>
             <p class="customer"><em>Bailey Ball Chair, Nov 2018</em></p>
         </div>
-        <img src="assets/images/sitephotos/Juneball2019lensflare.jpg" alt="A picture of the band performing at University College's June Ball, and the disco lighting causes a lens flare on the image.">
+        <div class="review-image">
+            <img src="assets/images/sitephotos/Juneball2019lensflare.jpg" alt="A picture of the band performing at University College's June Ball, and the disco lighting causes a lens flare on the image.">
+        </div>
         <div>
             <p class="review">“Provided the perfect entertainment for our event and guest speaker. Fun and light-hearted, but great music too.”</p>
             <p class="customer"><em>Charis Cheeseman, Feb 2018</em></p>
