Position review cards and images in the centre of page with 40px margin

--- a/reviews.html
+++ b/reviews.html
@@ -35,26 +35,26 @@
         <h2>Reviews.</h2>
         <h3>Hear what others have to say about our band:</h3>
     </header>
-    <section id="reviews-section">
+    <section class="reviews-section">
         <div>
             <p class="review">“They were great at our wedding! Got the whole crowd dancing!”</p>
             <p class="customer"><em>Harry & Sally, June 2021</em></p>
         </div>
-        <div class="review-image">
+        <div id="review-image1">
             <img src="assets/images/sitephotos/deejdidsomethingdaft.jpg" alt="A picture of the band onstage with their instruments, laughing at the drummer; Ben.">
         </div>
         <div>
             <p class="review">“We loved them at our summer ball! They brought so much energy to the event!”</p>
             <p class="customer"><em>Durham June ball committee, June 2019</em></p>
         </div>
-        <div class="review-image">
+        <div id="review-image2">
             <img src="assets/images/sitephotos/HannahandHarry2018.jpg" alt="A picture of Hannah and Harry onstage performing during a big live event in a marquee.">
         </div>
         <div>
             <p class="review">“Great to have two fellow St John's college members rocking it onstage!”</p>
             <p class="customer"><em>Bailey Ball Chair, Nov 2018</em></p>
         </div>
-        <div class="review-image">
+        <div id="review-image3">
             <img src="assets/images/sitephotos/Juneball2019lensflare.jpg" alt="A picture of the band performing at University College's June Ball, and the disco lighting causes a lens flare on the image.">
         </div>
         <div>
