--- a/reviews.html
+++ b/reviews.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <nav id="nav-main">
-        <div id="nav-logo">
-            <h1>Forster</h1>
-            <h2>& The Mustard Cutters</h2>
-        </div>
+        <a href="index.html">
+            <div id="nav-logo">
+                <h1>Forster</h1>
+                <h2>& The Mustard Cutters</h2>
+            </div>
+        </a>
         <ul id="nav-menu">
             <li>
                 <a href="about.html">About</a>
