remove padding from review page background and increase line height for book now section.

--- a/reviews.html
+++ b/reviews.html
@@ -65,7 +65,7 @@
         </div>
     </section>
     <section id="book-now">
-        <p>Like what you see?<a href="contact.html"><span>Book Us Now</span></a></p>
+        <p>Want us to play at your event?<br><a href="contact.html"><span>Book Us Now</span></a></p>
     </section>
     <footer>
         <p><strong>Follow us on:</strong></p>
