--- a/reviews.html
+++ b/reviews.html
@@ -47,7 +47,7 @@
         </div>
         <div>
             <p class="review">“We loved them at our summer ball! They brought so much energy to the event!”</p>
-            <p class="customer"><em>Durham June ball committee, June 2019</em></p>
+            <p class="customer"><em>June Ball, June 2019</em></p>
         </div>
         <div id="review-image2">
             <img src="assets/images/sitephotos/HannahandHarry2018.jpg" alt="A picture of Hannah and Harry onstage performing during a big live event in a marquee.">
@@ -78,7 +78,6 @@
             </li>
         </ul>
     </footer>
-
     <script src="https://kit.fontawesome.com/7f6a607fdc.js" crossorigin="anonymous"></script>
 </body>
 </html>
