--- a/media.html
+++ b/media.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!--Navigation bar-->
     <nav id="nav-main">
         <a href="index.html">
             <div id="nav-logo">
@@ -33,9 +34,11 @@
         </ul>
         <hr>
     </nav>
+    <!--Page title-->
     <header id="media-header">
         <h2>Give us a listen.</h2>
     </header>
+    <!--Main body of the page-->
     <main>
         <section id="media-section">
             <div id="video-card">
@@ -46,6 +49,9 @@
             </div>
             <p>Take a look at the video above from one of our biggest gigs yet! 
                 Forster and the Mustard Cutters played at the prestigous and exlusive June Ball in Durham Castle. <em>Song: Disco Yes by Tom Misch</em> </p>
+            <!--The iframe tag below is not my own code. It is generated from Soundcloud from the following URL: 
+                https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely 
+            A full description of how to access this code is included in the credits section of the readme-->
             <div id="soundcloud-card">
                 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/425638074&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/andrew-silk-743237145" title="Andy Silk" target="_blank" style="color: #cccccc; text-decoration: none;">Andy Silk</a> · <a href="https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely" title="Isn&#x27;t She Lovely" target="_blank" style="color: #cccccc; text-decoration: none;">Isn&#x27;t She Lovely</a></div>
             </div>
@@ -55,6 +61,7 @@
             <p>Like what you hear?<a href="contact.html"><span>Book Us Now</span></a></p>
         </section>
     </main>
+    <!--Footer with social links-->
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
