add comments to index, about, contact, reviews html files to aid readability.

--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!--navigation section and main logo-->
     <nav id="nav-main">
         <a href="index.html">
             <div id="nav-logo">
@@ -33,6 +34,7 @@
         </ul>
         <hr>
     </nav>
+    <!--Intro to page content-->
     <header id="about-header">
         <div>
             <h2>About.</h2>
@@ -43,6 +45,7 @@
                 whether it's your college ball or your Grandma's birthday party.</p>
         </div>
     </header>
+    <!--A series of silly and short biographies for each of the band members-->
     <main>
         <section id="about-body">
             <img src="assets/images/sitephotos/wholebandjuneball2019.jpg" alt="A picture of the whole band in black tie at a disco event at Durham University." id="whole-band-pic">
@@ -83,10 +86,12 @@
                 <p>The less said about this lot the better. We only let them play with us because they're a laugh.</p>
             </div>
         </section>
+        <!--A call to action/link to the contact page-->
         <section id="book-now">
             <p>Like what you see?<a href="contact.html"><span>Book Us Now</span></a></p>
         </section>
     </main>
+        <!--Social links-->
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
