--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!--Home page header/landing page. This takes up the viewport and includes a small button to enter the rest of the home page-->
     <header>
         <div id="hero-image">
             <div id="logo">
@@ -26,6 +27,7 @@
             </div>
         </div>
     </header>
+    <!--Home page navigation section-->
     <nav id="nav-home">
         <ul>
             <li>
@@ -50,6 +52,7 @@
             </li>
         </ul>
     </nav>
+    <!--Footer for social links-->
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
