--- a/reviews.html
+++ b/reviews.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!--Navigation section and main logo-->
     <nav id="nav-main">
         <a href="index.html">
             <div id="nav-logo">
@@ -33,10 +34,12 @@
         </ul>
         <hr>
     </nav>
+    <!--Intro to page content-->
     <header id="reviews-header">
         <h2>Reviews.</h2>
         <h3>Hear what others have to say about our band:</h3>
     </header>
+    <!--A series of reviews of the band and assorted pictures of the band performing-->
     <main>
         <section class="reviews-section">
             <div>
@@ -69,6 +72,7 @@
             <p>Want us to play at your event?<br><a href="contact.html"><span>Book Us Now</span></a></p>
         </section>
     </main>
+    <!--Social links-->
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
