--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <!--Navigation section and main logo-->
     <nav id="nav-main">
         <a href="index.html">
             <div id="nav-logo">
@@ -36,6 +37,7 @@
     <main>
 
     </main>
+        <!--Social links-->
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
