Add basic html structure for contact page header.

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,11 @@
         </ul>
         <hr>
     </nav>
+    <header>
+        <h2>Want us to play at your event?</h2>
+        <h3>Fill out the contact form below. We'll aim to get back to you within 5 business days with confirmation of our availability and a pricing quote.</h3>
+        <img src="assets/images/sitephotos/juneball2019venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
+    </header>
     <main>
 
     </main>
