add basic html structure for the form section and add ids for semantic elements in contact page.

--- a/contact.html
+++ b/contact.html
@@ -34,15 +34,20 @@
         </ul>
         <hr>
     </nav>
-    <header>
+    <!--Intro to page content-->
+    <header id="contact-header">
         <h2>Want us to play at your event?</h2>
         <h3>Fill out the contact form below. We'll aim to get back to you within 5 business days with confirmation of our availability and a pricing quote.</h3>
         <img src="assets/images/sitephotos/juneball2019venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
+        <div></div>
     </header>
     <main>
+        <section id="contact-form">
+            <form action=""></form>
+        </section>
 
     </main>
-        <!--Social links-->
+    <!--Social links-->
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
