style contact page header by positioning text and image with float and padding.

--- a/contact.html
+++ b/contact.html
@@ -36,16 +36,19 @@
     </nav>
     <!--Intro to page content-->
     <header id="contact-header">
-        <h2>Want us to play at your event?</h2>
-        <h3>Fill out the contact form below. We'll aim to get back to you within 5 business days with confirmation of our availability and a pricing quote.</h3>
-        <img src="assets/images/sitephotos/juneball2019venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
-        <div></div>
+        <div id="contact-header-title">
+            <h2>Want us to play at your event?</h2>
+            <h3>Fill out the contact form below. We'll aim to get back to you within 5 business days with confirmation of our availability and a pricing quote.</h3>
+        </div>
+        <div id="contact-header-image">
+            <img src="assets/images/sitephotos/juneball2019venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
+        </div>
+        <div id="contact-header-underline"></div>
     </header>
     <main>
         <section id="contact-form">
             <form action=""></form>
         </section>
-
     </main>
     <!--Social links-->
     <footer>
