Add mobile-friendly style rules for contact page header elements.

--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
     <header id="contact-header">
         <div id="contact-header-title">
             <h2>Want us to play at your event?</h2>
-            <h3>Fill out the contact form below. We'll aim to get back to you within 5 business days with confirmation of our availability and a pricing quote.</h3>
+            <p>Fill out the contact form below. We'll aim to get back to you within 5 business days with confirmation of our availability and a pricing quote.<p>
         </div>
         <div id="contact-header-image">
             <img src="assets/images/sitephotos/juneball2019venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
